--- a/styles/style_mobile.css
+++ b/styles/style_mobile.css
@@ -74,12 +74,12 @@
     }
 
     #trust .left{
-        height: 100vw;
+        width: 100%;
     }
 
     #trust .right{
         width: 90%;
-        height: 400px;
+        height: 500px;
     }
 
     #article  h3{
@@ -147,4 +147,43 @@
     #meetTheFutur h1{
     font-size: 10vw;
    }
+   #meetTheFutur{
+           height: 1400px;
+       }
+
+    .text h1{
+    font-size: 25px;
+    }
+
+    .text{
+        margin-left: 24px ;
+    }
+
+    .text h1 img{
+        height: 25px;
+    }
+    
+    #challenge li {   
+    height: 84px;
+    font-weight: 500;
+    font-size: 1em;
+    }
+
+    #challenge li i{
+    margin: 5px;
+    }
+
+    #trust .right p{
+
+    font-size: 25px;
+
+    width: 100%;
+    margin-bottom: 10px;
+    margin-top: 0;
+    }
+
+    .author i {
+    height: 40px;
+    line-height: 2;
+}
 }
